Forgotten item added.

--- a/public/index.html
+++ b/public/index.html
@@ -118,6 +118,10 @@
 									<input class="visually-hidden settings__input" type="radio" name="siteSettings" value="password" id="password">
 									<label class="settings__label" for="password">Сайт защищен паролем</label>
 									<p class="settings__explanation">Сайт увидит только тот, у кого есть пароль</p>
+									<div class="settings__extraField">
+										<label class="settings__extraLabel" for="password">Введите пароль</label>
+										<input class="settings__extraInput" type="password" name="password" id="password">
+									</div>
 								</li>
 								<li class="settings__item">
 									<input class="visually-hidden settings__input" type="radio" name="siteSettings" value="private" id="private">
